@@ -1,3 +1,8 @@
+2006-11-10  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* gas/arm/undefined.d: Run test on Windows CE.
+	* gas/arm/undefined_coff.d: Don't run test on Windows CE.
+
 2006-11-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/sse2.s: Test movdqa with memory destination.
